Add nutcracker ticket link

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                 <br><br>
                 Our mission is to bring dancers together who love performing and share our art with the community.
               </p>
-              <h3 class="">CBC Don Quixote 2024</h3>
+              <h3 class="">CBC Nutcracker 2024</h3>
               <p>
-                Thank you for an amazing season! Watch our Don Quixote 2024 performances and more on the Cardinal Ballet YouTube channel!
+                Join Cardinal Ballet Company for our production of The Nutcracker!
               </p>
 
-              <a href="https://youtu.be/2XrcAsFuxvA?si=oXvYZoV5asUSwKOr">
-                Don Quixote 2024 (Evening Show) <i class="fa fa-arrow-right" aria-hidden="true"></i>
+              <a href="https://www.eventbrite.com/e/the-nutcracker-cardinal-ballet-company-2024-tickets-1089037864569?aff=ebdsoporgprofile">
+               Get Your Tickets <i class="fa fa-arrow-right" aria-hidden="true"></i>
               </a>
             </div>
 
